[project]
name = "replication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gcsfs>=2025.9.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "xarray[zarr]>=2025.9.0",
    "zarr>=3.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
